--- a/package.json
+++ b/package.json
@@ -4,10 +4,6 @@
   "description": "Next.js styled with Tailwind CSS",
   "main": "index.js",
   "scripts": {
-    "analyze:tailwind-css-class-order": "rustywind --dry-run .",
-    "analyze": "npm run analyze:tailwind-css-class-order",
-    "fix:tailwind-css-class-order": "rustywind --write .",
-    "fix": "npm run fix:tailwind-css-class-order",
     "dev": "next",
     "build": "next build",
     "export": "npm run build && next export",
@@ -16,21 +12,22 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/taylorbryant/next-starter-tailwind.git"
+    "url": "git+https://github.com/alxhall/happy-friday-tailwind.git"
   },
   "author": "Alexander Hall",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/alxhall"
+    "url": "https://github.com/alxhall/happy-friday-tailwind/issues"
   },
-  "homepage": "https://github.com/alxhall",
+  "homepage": "https://github.com/alxhall/happy-friday-tailwind/",
   "dependencies": {
     "next": "10.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
   "devDependencies": {
-    "rustywind": "0.6.7",
-    "tailwindcss": "1.9.6"
+    "autoprefixer": "^10.0.2",
+    "postcss": "^8.1.9",
+    "tailwindcss": "^2.0.1"
   }
 }
